<resources>
    <string name="app_name">Brain Challenge</string>
    <string name="select_exercises">Select Exercises</string>
    <string name="lose_things">Lose things</string>
    <string name="remember_names">Remember names</string>
    <string name="learn_quickly">Learn things quickly</string>
    <string name="keep_track">Keep track of multiple things</string>
    <string name="next">Next</string>
</resources>
