<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SecondActivity">

    <ImageView
        android:id="@+id/brain_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/brain_image"
        android:scaleType="centerInside" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_lose_things"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lose_things" />

        <RadioButton
            android:id="@+id/radio_remember_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_names" />

        <RadioButton
            android:id="@+id/radio_learn_quickly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learn_quickly" />

        <RadioButton
            android:id="@+id/radio_keep_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_track" />
    </RadioGroup>

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next" />
</LinearLayout>
